Address spacing issues with flexbox

--- a/src/app.css
+++ b/src/app.css
@@ -26,18 +26,18 @@
 div.board {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-div.row {
+span.row {
   display: flex;
 }
 
 span.cell {
   display: inline-block;
-  height: 10px;
-  width: 10px;
+  height: 20px;
+  width: 20px;
   border: 1px solid lightgray;
-  margin: 0px 4px;
   background-color: white;
 }
 
